--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha --timeout 10000 --exit",
-    "start": "cross-env NODE_ENV=development nodemon app.js",
+    "start": "npm install && cross-env NODE_ENV=development nodemon app.js",
     "build": " npm i"
   },
   "author": "",
