--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "4.6.0",
-    "react-bootstrap": "1.6.1",
-    "react-icons": "4.2.0",
-    "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "1.6.1",
     "react-dom": "^18.2.0",
+    "react-icons": "4.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm install && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +40,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "babel-jest": "^29.5.0",
+    "babel-jest-amcharts": "^0.0.2",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^29.5.0"
   }
 }
