--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,16 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "build": " node app.js"
+    "test": "cross-env NODE_ENV=test mocha --timeout 10000 --exit",
+    "start": "npm i && cross-env NODE_ENV=development&& nodemon app.js",
+    "build": " npm i"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "define": "^1.0.1",
     "dotenv": "^16.0.1",
@@ -23,5 +24,10 @@
     "morgan": "^1.10.0",
     "nodemon": "^1.19.4",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0"
   }
 }
